--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  image_picker: ^1.0.4  
 
 flutter:
   uses-material-design: true
