--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -19,6 +19,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   image_picker: ^1.0.4  
+  intl: ^0.20.2
 
 flutter:
   uses-material-design: true
