--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   path: ^1.8.3
   encrypt: ^5.0.3
   flutter_secure_storage: ^9.2.4
+  http_parser: ^4.0.2
   
 flutter:
   uses-material-design: true
