--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   encrypt: ^5.0.3
   flutter_secure_storage: ^9.2.4
   http_parser: ^4.0.2
+  flutter_dotenv: ^5.0.2
   
 flutter:
   uses-material-design: true
