--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.6.1
 
 dependencies:
+
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.17  # Pastikan versi ini tetap
@@ -21,6 +22,7 @@ dev_dependencies:
   image_picker: ^1.0.4  
   intl: ^0.18.1
   sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0
   path_provider: ^2.1.2
   path: ^1.8.3
   encrypt: ^5.0.3
