--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -20,7 +20,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   image_picker: ^1.0.4  
-  intl: ^0.18.1
+  intl: ^0.19.0
   sqflite: ^2.3.0
   path_provider: ^2.1.2
   path: ^1.8.3
@@ -29,7 +29,8 @@ dev_dependencies:
   http_parser: ^4.0.2
   flutter_dotenv: ^5.0.2
   mobile_scanner: ^3.2.0
-
+  flutter_localizations:
+    sdk: flutter
 flutter:
   uses-material-design: true
 
