--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -7,14 +7,15 @@ environment:
   sdk: ^3.6.1
 
 dependencies:
-
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.17  # Pastikan versi ini tetap
+  flutter_svg: ^2.0.17
   google_fonts: ^6.1.0
-  http: ^1.3.0  # Versi yang sesuai dengan `flutter_svg`
-  shared_preferences: ^2.0.15 # pastikan menggunakan versi terbaru yang sesuai
+  http: ^1.3.0
+  shared_preferences: ^2.0.15
   email_validator: ^2.1.17
+  rename: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -23,6 +24,7 @@ dev_dependencies:
   intl: ^0.19.0
   sqflite: ^2.3.0
   path_provider: ^2.1.2
+  flutter_launcher_icons: ^0.13.1
   path: ^1.8.3
   encrypt: ^5.0.3
   flutter_secure_storage: ^9.2.4
@@ -31,8 +33,16 @@ dev_dependencies:
   mobile_scanner: ^3.2.0
   flutter_localizations:
     sdk: flutter
+
 flutter:
   uses-material-design: true
 
   assets:
     - assets/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_background: "#ffffff"
+  min_sdk_android: 21
